--- a/feathers/basic-layouts/content/css/miniplayer.css
+++ b/feathers/basic-layouts/content/css/miniplayer.css
@@ -75,11 +75,14 @@ window#mini
 
 
 /* Restore */
+sb-feathers-toggle-button.miniplayer
+{
+  margin: 0px 0px 0px 6px !important;
+}
 .miniplayer > hbox > .sb-feathers-toggle-button > .clickhold-button
 {
   list-style-image: url(chrome://songbird/skin/icons/feather-switcher-icon.png);
   -moz-image-region: auto;
-  margin: 0px 0px 0px 5px;
 }
 
 /*  Close Window */
@@ -87,7 +90,7 @@ sb-sys-close-button.miniplayer
 {
   list-style-image: url(chrome://songbird/skin/miniplayer/mini.btn.close.png) !important;
   -moz-image-region: auto;
-   margin: 0px 3px 0px 3px;
+   margin: 0px 10px 0px 7px !important;
 }
 
                         
